symbolic execution for lexical dependence

--- a/LDA/lib/CMakeLists.txt
+++ b/LDA/lib/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
 	common/SoftPara.cpp
 	common/Stat.cpp	
 	ModuleSet.cpp
+	ExternalLib.cpp
     )
 
 #add_llvm_loadable_module(ldi ${SOURCES})
