--- a/LDIpass/CMakeLists.txt
+++ b/LDIpass/CMakeLists.txt
@@ -2,7 +2,7 @@
 # from the hello plugin.
 if( NOT LLVM_REQUIRES_RTTI )
   if( NOT LLVM_REQUIRES_EH )
-    set(LLVM_EXPORTED_SYMBOL_FILE ${CMAKE_CURRENT_SOURCE_DIR}/IBSpass.exports)
+    set(LLVM_EXPORTED_SYMBOL_FILE ${CMAKE_CURRENT_SOURCE_DIR}/LDIpass.exports)
   endif()
 endif()
 
@@ -10,12 +10,12 @@ if(WIN32 OR CYGWIN)
   set(LLVM_LINK_COMPONENTS Core Support)
 endif()
 
-add_llvm_library( llvmIBSpass MODULE BUILDTREE_ONLY
-  IBSpass.cpp
+add_llvm_library( llvmLDIpass MODULE BUILDTREE_ONLY
+  LDIpass.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/Transforms
-  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Transforms/IBSpass
+  ${LLVM_MAIN_INCLUDE_DIR}/llvm/Transforms/LDIpass
 
   DEPENDS
   intrinsics_gen
