--- a/vPlugins/plugins.ini
+++ b/vPlugins/plugins.ini
@@ -1,3 +1,3 @@
-[name:InfoTrack, entry:InfoTrack, module:libinfotrack.so, active:1]
+[name:InfoTrack, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:1]
 
 
