--- a/CComponent/SDA/tools/sda/CMakeLists.txt
+++ b/CComponent/SDA/tools/sda/CMakeLists.txt
@@ -3,10 +3,15 @@ if(DEFINED IN_SOURCE_BUILD)
     set(LLVM_LINK_COMPONENTS BitWriter Core IPO IrReader InstCombine Instrumentation Target Linker Analysis ScalarOpts Support)
     add_llvm_tool( sda Main.cpp LibEntry.cpp)
 else()
+
+	link_directories(/usr/local/lib)
+	
     llvm_map_components_to_libnames(llvm_libs BitWriter Core IPO IrReader InstCombine Instrumentation Target Linker Analysis ScalarOpts Support )
     add_executable( sda Main.cpp LibEntry.cpp)
 
-    target_link_libraries( sda LLVMsda ${llvm_libs} )
+    target_link_libraries( sda LLVMsda ${llvm_libs} mxml)
+    
+	#link_libraries(mxml)
 
     set_target_properties( sda PROPERTIES
                            RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
