--- a/vPlugins/plugins.ini
+++ b/vPlugins/plugins.ini
@@ -1,3 +1,6 @@
-[name:InfoTrack, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:1]
+[name:decfi, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:0]
+[name:deinject, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:0]
+[name:deleak, entry:InfoTrack, module:libdeleak.so, sink:deleak.sink, active:1]
+[name:deoverflow, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:0]
 
 
