--- a/vPlugins/plugins.ini
+++ b/vPlugins/plugins.ini
@@ -1,6 +1,6 @@
-[name:decfi, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:0]
-[name:deinject, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:0]
-[name:deleak, entry:InfoTrack, module:libdeleak.so, sink:deleak.sink, active:1]
-[name:deoverflow, entry:InfoTrack, module:libinfotrack.so, sink:InfoTrack.sink, active:0]
+[name:decfi, entry:DetectCfi, module:libdecfi.so, sink:decfi.sink, active:1]
+[name:deinject, entry:DetectInject, module:libdeinject.so, sink:deinject.sink, active:0]
+[name:deleak, entry:DetectLeak, module:libdeleak.so, sink:deleak.sink, active:1]
+[name:deoverflow, entry:DetectOverflow, module:libdeoverflow.so, sink:deoverflow.sink, active:0]
 
 
