--- a/DynAnalyzer/makefile
+++ b/DynAnalyzer/makefile
@@ -6,22 +6,21 @@ SOURCE_PATH  = source
 INCLUDE_PATH = include
 OBJ_PATH     = obj
 
-#CFLAGS      = -fPIC -O3 -I$(INCLUDE_PATH)
-CFLAGS       = -D__DEBUG__ -O3 -I$(INCLUDE_PATH)
+#CFLAGS     = -fPIC -O3 -I$(INCLUDE_PATH) -D__DEBUG__ 
+CFLAGS      = -O3 -I$(INCLUDE_PATH)
+LD_CFLAGS   = -lpthread -ldl 
 
 SOURCE_FILES = $(wildcard $(SOURCE_PATH)/*.c)
 OBJ_FILES    = $(addprefix $(OBJ_PATH)/, $(addsuffix .o,$(notdir $(basename $(SOURCE_FILES)))))
 
-TARGET = libDynAnalyze.a
+TARGET = difaEngine
 
 .PHONY:all clean
 
 all: $(TARGET)
 
 $(TARGET): $(OBJ_FILES)
-	#$(LD) -flto -fplugin=emit-llvm -fPIC -shared -o $@ $^
-	#$(LD) -fPIC -shared -o $@ $^
-	$(AR) $@ $^
+	$(LD) -o $@ $^ $(LD_CFLAGS)
 	
 $(OBJ_PATH)/%.o: $(SOURCE_PATH)/%.c
 	@if [ ! -d $(OBJ_PATH) ];then mkdir $(OBJ_PATH); fi
