--- a/vPlugins/plugins.ini
+++ b/vPlugins/plugins.ini
@@ -1,6 +1,6 @@
-[name:decfi, entry:DetectCfi, module:libdecfi.so, sink:decfi.sink, active:1]
-[name:deinject, entry:DetectInject, module:libdeinject.so, sink:deinject.sink, active:1]
-[name:deleak, entry:DetectLeak, module:libdeleak.so, sink:deleak.sink, active:1]
-[name:deoverflow, entry:DetectOverflow, module:libdeoverflow.so, sink:deoverflow.sink, active:0]
-
+[name:decfi, init:InitCfi, module:libdecfi.so, sink:decfi.sink, active:0]
+[name:deinject, init:InitInject, module:libdeinject.so, sink:deinject.sink, active:0]
+[name:deleak, init:InitLeak, module:libdeleak.so, sink:deleak.sink, active:0]
+[name:deoverflow, init:InitOverflow, module:libdeoverflow.so, sink:deoverflow.sink, active:0]
+[name:deincmp, init:InitIncmp, module:libdeincmp.so, sink:deincmp.sink, active:1]
 
