--- a/vPlugins/plugins.ini
+++ b/vPlugins/plugins.ini
@@ -1,6 +1,8 @@
 [name:decfi, init:InitCfi, module:libdecfi.so, sink:decfi.sink, active:0]
 [name:deinject, init:InitInject, module:libdeinject.so, sink:deinject.sink, active:0]
 [name:deleak, init:InitLeak, module:libdeleak.so, sink:deleak.sink, active:0]
-[name:deoverflow, init:InitOverflow, module:libdeoverflow.so, sink:deoverflow.sink, active:0]
-[name:deincmp, init:InitIncmp, module:libdeincmp.so, sink:deincmp.sink, active:1]
+[name:debuf-overflow, init:InitBufOverflow, module:libdebuf-overflow.so, sink:debuf-overflow.sink, active:0]
+[name:deint-overflow, init:InitIntOverflow, module:libdeint-overflow.so, sink:deint-overflow.sink, active:0]
+[name:deincmp, init:InitIncmp, module:libdeincmp.so, sink:deincmp.sink, active:0]
+[name:dedivzero, init:InitDivZero, module:libdedivzero.so, sink:dedivzero.sink, active:1]
 
