plugin:int-overflow

--- a/vPlugins/deint-overflow/makefile
+++ b/vPlugins/deint-overflow/makefile
@@ -1,12 +1,9 @@
 
-CC = clang 
-LD = clang
-
 SOURCE_PATH = source
 HEADER_PATH = include
 OBJ_PATH    = obj
 
-CFLAGS      = -D__DEBUG__ -fPIC -g -I$(HEADER_PATH) -I$(INCLUDE)
+CUR_CFLAGS  = $(CFLAGS) -I$(HEADER_PATH) -I$(INCLUDE)
 
 SOURCE_FILES = $(wildcard $(SOURCE_PATH)/*.c)
 OBJ_FILES    = $(addprefix $(OBJ_PATH)/, $(addsuffix .o,$(notdir $(basename $(SOURCE_FILES)))))
@@ -18,11 +15,12 @@ TARGET = libdeint-overflow.so
 all: $(TARGET)
 
 $(TARGET): $(OBJ_FILES)
-	$(LD) -fPIC -shared $(PLUGIN_LINK) -o $@ $^
+	$(LD) -o $@ $^ $(LDFLAGS)
 	
 $(OBJ_PATH)/%.o: $(SOURCE_PATH)/%.c
 	@if [ ! -d $(OBJ_PATH) ];then mkdir $(OBJ_PATH); fi
-	$(CC) $(CFLAGS) -c -o $@ $<
+	$(CC) $(CUR_CFLAGS) -c -o $@ $<
 
 clean:
 	rm -rf $(OBJ_PATH) $(TARGET)
+
