--- a/CComponent/SDA/CMakeLists.txt
+++ b/CComponent/SDA/CMakeLists.txt
@@ -9,9 +9,9 @@ if(NOT COMMAND add_llvm_loadable_module)
         # In particular, we need C++11 and the -fno-rtti flag
         set(CMAKE_CXX_STANDARD 11)
 	if(CMAKE_BUILD_TYPE MATCHES "Debug")
-		set(CMAKE_CXX_FLAGS "-std=gnu++11 -O3 -fno-rtti")
+		set(CMAKE_CXX_FLAGS "-std=gnu++11 -O3 -g -fno-rtti")
 	else()
-		set(CMAKE_CXX_FLAGS "-std=gnu++11 -O3 -fno-rtti")
+		set(CMAKE_CXX_FLAGS "-std=gnu++11 -O3 -g -fno-rtti")
 	endif()
 
 	find_package(LLVM REQUIRED CONFIG)
