--- a/Experiments/scripts/pytorch/CMakeLists.txt
+++ b/Experiments/scripts/pytorch/CMakeLists.txt
@@ -384,7 +384,7 @@ if(LINUX)
   #set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--no-as-needed")
   #set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -flto -shared -pthread")
   #set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} -Wl,--no-as-needed -flto -pthread")
-  #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--no-as-needed -flto -pthread")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--no-as-needed -flto -pthread -lDynAnalyze")
   #set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -Wl,--no-as-needed -flto -pthread")
   #string(APPEND CMAKE_C_FLAGS  " -v -emit-llvm ")
   #string(APPEND CMAKE_CXX_FLAGS  " -v -emit-llvm ")
