--- a/vPlugins/plugins.ini
+++ b/vPlugins/plugins.ini
@@ -5,4 +5,5 @@
 [name:deint-overflow, init:InitIntOverflow, module:libdeint-overflow.so, sink:deint-overflow.sink, active:1]
 [name:deincmp, init:InitIncmp, module:libdeincmp.so, sink:deincmp.sink, active:1]
 [name:dedivzero, init:InitDivZero, module:libdedivzero.so, sink:dedivzero.sink, active:1]
+[name:detypeerr, init:InitTypeErr, module:libdetypeerr.so, sink:detypeerr.sink, active:1]
 
